# autopilot-nodekit

./: .gitattributes  .gitignore  AGENTS.md  BUNDLE_NOTES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOOP_STATE.md  Makefile  NOTICE  OPEN_SOURCE_MANIFEST.txt  PLANS.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.codex/: config.toml  hooks.json
.codex/agents/: autopilot-checker.toml  autopilot-explorer.toml  autopilot-santa-reviewer-a.toml  autopilot-santa-reviewer-b.toml
.codex/hooks/: autopilot_stop_render.py
.github/: pull_request_template.md
autopilot_nodekit/: __init__.py  artifact_verify.py  background.py  bootstrap.py  cli.py  codex_goal.py  codex_native.py  context.py  db.py  figure_plan.py  goal_contract.py  graph_patch.py  manifest.py  memory.py  metrics.py  operator.py  project_spec.py  recovery.py  render.py  repair.py  runner.py  santa_review.py  schema.sql  setup_config.py  shell_safety.py  smart_start.py  tmux.py  util.py  verifier.py  workflow.py  workflow_plan.py
docs/: ARCHITECTURE.md  CODEX_NATIVE.md  FUTURE_USE.md  GITHUB_PUBLISHING.md  INTEGRATION_WITH_EXISTING_SKILLS.md  LOOP_ENGINEERING_RECOMMENDATIONS.md  MCP_SECURITY_NOTES.md  MEMORY_NODE_DESIGN.md  MEMORY_RETRIEVAL.md  OPERATOR_AUTOMATION.md  PROMPT_SPEC_FAST_LOOP.md  PUBLIC_QUICKSTART.zh-CN.md  REVIEW_GATED_WORKFLOW.md  SMART_START_BACKGROUND.md  TOOL_SELECTION.md  V09_BOOTSTRAP_HARDENING.md  WORKER_ADAPTERS.md
examples/: PROJECT_PROMPT.example.md  config.codex.interactive.yml  config.codex.yml  config.shell.yml  graph_patch.supersede_task.json  manifest.yml  project_prompt.figure_batch.md  worker_result.failed_insert_child.json  worker_result.passed.json
project_memory/: failures.md  human_feedback.md
scripts/: bootstrap.sh  run_worker_loop.sh  tmux_start_worker.sh
tests/: test_bootstrap_v09.py  test_operator_v092.py  test_runner_control_plane.py  test_shell_safety_v091.py  test_smart_start_background.py
(+18 files in other folders)
